<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MaintainService</string>
    <string name="title_work_list">我的工单</string>
    <string name="title_add_work_order">新增工单</string>
    <string name="title_knowledge_base">知识库</string>
    <string name="title_my_information">我的信息</string>
    <string name="title_all_work_order">全部工单</string>
    <string name="title_unsigned_order">待签收工单</string>
    <string name="title_uncheck_order">待签到工单</string>
    <string name="title_unfinished_order">待完成工单</string>
    <string name="title_uncomment_order">未评价工单</string>
    <string name="title_finished_order">已完成工单</string>
    <string name="title_fault_library">故障库</string>
    <string name="title_database">资料库</string>
    <string name="title_fault_type">故障类型</string>
    <string name="title_equipment_file">设备档案</string>
    <string name="title_maintain_histoty">维修记录</string>

    <string name="title_my_name">姓名</string>
    <string name="title_my_history_order">我的工单</string>
    <string name="title_about_tianduan">关于天缎</string>
    <string name="title_inform_center">消息中心</string>
    <string name="title_help">帮助与反馈</string>
    <string name="title_setting">设置</string>

    <string name="title_order_id">工单号</string>
    <string name="title_order_status">工单状态</string>
    <string name="title_client_name">&#160;&#160; &#160;&#160;&#160;  客户名称:</string>
    <string name="hint_client_name">请输入客户名称:</string>
    <string name="title_repair_time">&#160; &#160; &#160; &#160; &#160; 报修时间</string>
    <string name="hint_repair_time">请选择报修时间</string>
    <string name="title_expected_start_time">预计开始时间:</string>
    <string name="hint_expected_start_time">请选择预计开始时间</string>
    <string name="title_expected_finish_time">预计结束时间:</string>
    <string name="hint_expected_finish_time">请选择预计结束时间</string>
    <string name="title_client_address">&#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; 地址:</string>
    <string name="hint_client_address">  请输入地址</string>
    <string name="title_equipment_id"> &#160; &#160; &#160;&#160; &#160; 设备编号:</string>
    <string name="title_equipment_name">  &#160; &#160; &#160; &#160; &#160; &#160; &#160; 设备名:</string>
    <string name="title_contact_name">  &#160; &#160; 联系人姓名:</string>
    <string name="hint_contact_name">请输入联系人姓名</string>
    <string name="title_contact_phone">  &#160; &#160; 联系方式:</string>
    <string name="hint_contact_phone">请输入联系方式</string>
    <string name="title_remarks">    &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160;  备注:</string>
    <string name="hint_remarks">请输入备注</string>
    <string name="title_fault_description">&#160; &#160;  &#160; &#160; &#160;  故障描述:</string>
    <string name="hint_fault_description">请输入故障描述</string>
    <string name="title_submit">确认提交</string>
    <string name="title_select_pictures">  &#160; &#160; &#160; &#160; &#160; 选择照片:</string>
    <string name="title_select_video">  &#160; &#160; &#160;&#160; &#160;  选择视频:</string>
    <string name="title1_fault_type"> &#160; &#160; &#160;&#160; &#160; 故障类型:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">用户手机号</string>
    <string name="prompt_password">登陆密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_phone">手机号无效</string>
    <string name="error_invalid_password">密码格式不规范，应包含大小写字母和数字</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请输入手机号</string>
    <string name="permission_rationale">"需要打开联系人权限方便自动补全输入"
    </string>
    <string name="title_activity_personal_infromation">PersonalInfromation</string>
    <string name="title_activity_history_order">HistoryOrderActivity</string>
    <string name="title_activity_about_tianduan">AboutTianduanActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_setting">SettingActivity</string>


</resources>
