<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WorkListFragment"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/knowledge_base_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        app:title=" "
        app:navigationIcon="@drawable/ic_menu">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_knowledge_base"
            android:textStyle="bold"
            />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/knowledgeBaseDrawerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        >
        <!-- 主界面 -->
        <FrameLayout
            android:id="@+id/knowledge_base_framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <!-- 测滑界面 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical">

            <Button
                android:id="@+id/faultLibraryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fault_library"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/databaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_database"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/equipmentFileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_equipment_file"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/maintainHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_maintain_histoty"
                android:background="@drawable/button_style"/>

        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>