<?xml version="1.0" encoding="utf-8"?>
<!-- todo  order简要布局-->
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/viewDetail"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    >
    <TableRow
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/orderId"
            android:textStyle="bold"
            android:textSize="@dimen/text_title"
            android:layout_span="2"
            />
    </TableRow>
   <TableRow
       android:layout_marginBottom="10dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/title_repair_time"
           android:layout_marginRight="5dp"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/repairTime" />
   </TableRow>

    <TableRow
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/title_client_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clientName"
            />
    </TableRow>

    <TableRow
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/title_contact_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactName"
            />

    </TableRow>


    <TableRow
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/title_equipment_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equipmentName"
            />
    </TableRow>

    <TableRow
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/title_order_status"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderStatus"
            />
    </TableRow>


</TableLayout>